--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,31 +1,29 @@
 name: Continuous integration
-
+permissions: write-all
 on:
-  schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
   push:
-    branches:
-      - master
-      - main
+    branches: [ main ]
 
 jobs:
+  #Build, test and analyze
   build-test-analyze:
     name: Build, test and analyze
     if: "!contains(github.event.head_commit.message, '[skip test]')"
-    uses: siosios/metrics/.github/workflows/test.yml@master
+    uses: siosios/metrics/.github/workflows/test.yml@main
 
+  # Format code
   format:
     name: Format code
     runs-on: self-hosted
-    needs: build-test-analyze
+    needs: [ build-test-analyze ]
     if: always() && (needs.build-test-analyze.result == 'success' || needs.build-test-analyze.result == 'skipped')
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+      - name: Checkout main
+        run: git checkout main
       - name: Format code
         run: |
           npm install -g dprint
@@ -33,16 +31,155 @@ jobs:
           npx dprint fmt --config .github/config/dprint.json
       - name: Publish formatted code
         run: |
+          set +e
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add --all
-          git commit -m "chore: code formatting" || echo "No changes to commit"
-          git push origin ${GITHUB_REF##*/}
+          git commit -m "chore: code formatting"
+          git push
+          set -e
 
+  # Update plugins and template indexes, along with README.md
   update-indexes:
     name: Publish rebuilt metrics indexes
     runs-on: self-hosted
-    needs: format
+    needs: [ format ]
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup NodeJS
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: Pull changes
+        run: |
+          git checkout main
+          git pull
+      - name: Setup metrics
+        run: npm install
+      - name: npm audit
+        run: npm audit fix --force
+      - name: Publish rebuild metrics indexes
+        run: npm run build --publish
+
+  # Build docker image from master and publish it to GitHub registry
+  docker-master:
+    name: Publish main to GitHub registry
+    runs-on: self-hosted
+    needs: [ update-indexes ]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Login to GitHub registry
+        run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Build docker image
+        run: docker build -t ghcr.io/siosios/metrics:main .
+      - name: Publish to GitHub registry
+        run: docker push ghcr.io/siosios/metrics:main
+      - name: Tag docker image (beta) and publish to GitHub registry
+        run: |
+          set +e
+          METRICS_VERSION=$(cat package.json | grep -Po '(?<="version": ")\d+[.]\d+(?=[.]0-beta")')
+          METRICS_VERSION_BETA="$METRICS_VERSION-beta"
+          set -e
+          if [[ ! -z "$METRICS_VERSION" ]]; then
+            echo "Beta version: v$METRICS_VERSION_BETA"
+            docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
+            docker push ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
+          fi
+      - name: Tag docker image (main) and publish to GitHub registry
+        run: |
+          docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:main
+          docker push ghcr.io/siosios/metrics:main
+
+  # Deploy to beta-metrics.lecoq.io
+  #deploy-master:
+  #  name: Deploy siosios/metrics@main
+  #  runs-on: ubuntu-latest
+  #  needs: [ docker-master ]
+  #  steps:
+  #    - name: Deploy web instance
+  #      run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_BETA_TOKEN }}' https://beta-metrics.lecoq.io/.control/stop"
+   #   - name: Wait for redeploy
+   #     run: sleep 120
+   #   - name: Check deployment status
+   #     run: "curl --retry 15 --retry-delay 60 https://beta-metrics.lecoq.io/.version"
+
+  # Test siosios/metrics@master
+  action-master-test:
+    name: Test siosios/metrics@main
+    runs-on: self-hosted
+    needs: [ docker-master ]
+    steps:
+      - name: Run tests
+        uses: siosios/metrics@main
+        with:
+          token: MOCKED_TOKEN
+          plugins_errors_fatal: yes
+          dryrun: yes
+          use_mocked_data: yes
+          verify: yes
+
+  # Publish examples
+  publish-examples:
+    name: Publish examples
+    needs: [ action-master-test ]
+    uses: siosios/metrics/.github/workflows/examples.yml@main
+    secrets:
+      METRICS_TOKEN: ${{ secrets.METRICS_TOKEN }}
+      METRICS_TOKEN_WITH_SCOPES: ${{ secrets.METRICS_TOKEN_WITH_SCOPES }}
+      METRICS_TOKEN_PERSONAL: ${{ secrets.METRICS_TOKEN_PERSONAL }}
+      CHESS_TOKEN: ${{ secrets.CHESS_TOKEN }}
+      PAGESPEED_TOKEN: ${{ secrets.PAGESPEED_TOKEN }}
+      GOOGLE_MAP_TOKEN: ${{ secrets.GOOGLE_MAP_TOKEN }}
+      SPLATOON_TOKEN: ${{ secrets.SPLATOON_TOKEN }}
+      SPLATOON_STATINK_TOKEN: ${{ secrets.SPLATOON_STATINK_TOKEN }}
+      SPOTIFY_TOKENS: ${{ secrets.SPOTIFY_TOKENS }}
+      STOCK_TOKEN: ${{ secrets.STOCK_TOKEN }}
+      TWITTER_TOKEN: ${{ secrets.TWITTER_TOKEN }}
+      WAKATIME_TOKEN: ${{ secrets.WAKATIME_TOKEN }}
+
+  # Publish examples (presets)
+  publish-examples-presets:
+    name: Publish examples (presets)
+    needs: [ action-master-test ]
+    uses: siosios/metrics/.github/workflows/examples.presets.yml@main
+
+  # Build docker image from master and publish it to GitHub registry with release tag
+  docker-release:
+    name: Publish release to GitHub registry
+    runs-on: self-hosted
+    needs: [ publish-examples ]
+    if: contains(github.event.head_commit.message, '[release]')
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Login to GitHub registry
+        run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Pull docker image (main)
+        run: docker pull ghcr.io/siosios/metrics:main
+      - name: Tag docker image (release)
+        env:
+          GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
+        run: docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
+      - name: Publish release to GitHub registry
+        env:
+          GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
+        run: docker push ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
+      - name: Tag docker image (latest)
+        run: docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:latest
+      - name: Publish latest to GitHub registry
+        run: docker push ghcr.io/siosios/metrics:latest
+
+  # Rebase latest branch on master
+  update-latest:
+    name: Rebase latest on main
+    runs-on: self-hosted
+    needs: [ docker-release ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -54,130 +191,23 @@ jobs:
           node-version: 20
       - name: Setup metrics
         run: npm install
-      - name: Publish rebuild metrics indexes
-        run: npm run build -- publish
+      - name: Pull
+        run: git pull
+      - name: Checkout latest
+        run: git checkout latest
+      - name: Rebase latest on main
+        run: git merge main
+      - name: Push latest
+        run: git push origin latest
 
-  docker-master:
-    name: Publish master to GitHub registry
-    runs-on: self-hosted
-    needs: update-indexes
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Login to GitHub registry
-        run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-      - name: Build and publish docker image
-        run: |
-          docker build -t ghcr.io/siosios/metrics:master .
-          docker push ghcr.io/siosios/metrics:master
-      - name: Tag and publish beta and main images
-        run: |
-          metrics_VERSION=$(cat package.json | grep -Po '(?<="version": ")\d+[.]\d+(?=[.]0-beta")')
-          metrics_VERSION_BETA="$metrics_VERSION-beta"
-          if [[ ! -z "$metrics_VERSION" ]]; then
-            docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$metrics_VERSION_BETA
-            docker push ghcr.io/siosios/metrics:$metrics_VERSION_BETA
-          fi
-          docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:main
-          docker push ghcr.io/siosios/metrics:main
-
-  deploy-master:
-    name: Deploy siosios/metrics@master
-    runs-on: self-hosted
-    needs: docker-master
-    steps:
-      - name: Deploy web instance
-        run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_BETA_TOKEN }}' https://beta-metrics.lecoq.io/.control/stop"
-      - name: Wait for redeploy
-        run: sleep 120
-      - name: Check deployment status
-        run: "curl --retry 15 --retry-delay 60 https://beta-metrics.lecoq.io/.version"
-
-  action-master-test:
-    name: Test siosios/metrics@master
-    runs-on: self-hosted
-    needs: docker-master
-    steps:
-      - name: Run tests
-        uses: mikey-/metrics@main
-        with:
-          token: MOCKED_TOKEN
-          plugins_errors_fatal: yes
-          dryrun: yes
-          use_mocked_data: yes
-          verify: yes
-
-  publish-examples:
-    name: Publish examples
-    needs: action-master-test
-    uses: siosios/metrics/.github/workflows/examples.yml@master
-    secrets:
-      metrics_TOKEN: ${{ secrets.metrics_TOKEN }}
-      metrics_TOKEN_WITH_SCOPES: ${{ secrets.metrics_TOKEN }}
-      metrics_TOKEN_PERSONAL: ${{ secrets.metrics_TOKEN }}
-      CHESS_TOKEN: ${{ secrets.metrics_TOKEN }}
-      PAGESPEED_TOKEN: ${{ secrets.metrics_TOKEN }}
-      GOOGLE_MAP_TOKEN: ${{ secrets.metrics_TOKEN }}
-      SPLATOON_TOKEN: ${{ secrets.metrics_TOKEN }}
-      SPLATOON_STATINK_TOKEN: ${{ secrets.metrics_TOKEN }}
-      SPOTIFY_TOKENS: ${{ secrets.SPOTIFY_TOKENS }}
-      STOCK_TOKEN: ${{ secrets.STOCK_TOKEN }}
-      TWITTER_TOKEN: ${{ secrets.TWITTER_TOKEN }}
-      WAKATIME_TOKEN: ${{ secrets.metrics_TOKEN }}
-
-  publish-examples-presets:
-    name: Publish examples (presets)
-    needs: action-master-test
-    uses: siosios/metrics/.github/workflows/examples.presets.yml@master
-
-  docker-release:
-    name: Publish release to GitHub registry
-    runs-on: self-hosted
-    needs: publish-examples
-    if: contains(github.event.head_commit.message, '[release]')
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Login to GitHub registry
-        run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-      - name: Pull and tag docker image
-        run: |
-          docker pull ghcr.io/siosios/metrics:master
-          GITHUB_COMMIT_MESSAGE=${{ github.event.head_commit.message }}
-          docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
-          docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:latest
-      - name: Publish release and latest to GitHub registry
-        run: |
-          GITHUB_COMMIT_MESSAGE=${{ github.event.head_commit.message }}
-          docker push ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
-          docker push ghcr.io/siosios/metrics:latest
-
-  update-latest:
-    name: Rebase latest on master
-    runs-on: self-hosted
-    needs: docker-release
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Setup NodeJS
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - name: Rebase latest on master
-        run: |
-          git checkout latest
-          git merge master
-          git push origin latest
-
+  # Test siosios/metrics@latest
   action-latest-test:
     name: Test siosios/metrics@latest
     runs-on: self-hosted
-    needs: update-latest
+    needs: [ update-latest ]
     steps:
       - name: Run tests
-        uses: mikey-/metrics@latest
+        uses: siosios/metrics@latest
         with:
           token: MOCKED_TOKEN
           plugins_errors_fatal: yes
@@ -185,26 +215,24 @@ jobs:
           use_mocked_data: yes
           verify: yes
 
-  deploy-latest:
-    name: Deploy siosios/metrics@latest
-    runs-on: self-hosted
-    needs:
-      - docker-release
-      - deploy-master
-    steps:
-      - name: Deploy web instance
-        run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_TOKEN }}' https://metrics.lecoq.io/.control/stop"
-      - name: Wait for redeploy
-        run: sleep 120
-      - name: Check deployment status
-        run: "curl --retry 15 --retry-delay 60 https://metrics.lecoq.io/.version"
+  # Deploy to metrics.lecoq.io
+ # deploy-latest:
+  #  name: Deploy siosios/metrics@latest
+  #  runs-on: ubuntu-latest
+ #   needs: [ docker-release, deploy-master ]
+ #   steps:
+ #     - name: Deploy web instance
+ #       run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_TOKEN }}' https://metrics.lecoq.io/.control/stop"
+  #    - name: Wait for redeploy
+ #       run: sleep 120
+ #     - name: Check deployment status
+ #       run: "curl --retry 15 --retry-delay 60 https://metrics.lecoq.io/.version"
 
+  # Publish GitHub release
   publish-release:
     name: Publish release
     runs-on: self-hosted
-    needs:
-      - action-latest-test
-      - deploy-latest
+    needs: [ action-latest-test ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -212,10 +240,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+      - name: Setup metrics
+        run: npm install
       - name: Publish release
         run: node .github/scripts/release.mjs
         env:
           GITHUB_TOKEN: ${{ github.token }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-
