--- a/.github/workflows/repos.yml
+++ b/.github/workflows/repos.yml
@@ -1,9 +1,11 @@
 name: Generate Repo Count Image
-
 on:
-  schedule:
-    - cron: "0 0 * * *"  # runs daily at midnight
-  workflow_dispatch:    # allows manual trigger
+  # Schedule daily updates
+  schedule: [{cron: "0 0 * * *"}]
+  # (optional) Run workflow manually
+  workflow_dispatch:
+  # (optional) Run workflow when pushing on master/main
+  push: {branches: ["master", "main"]}
 
 jobs:
   create-image:
