--- a/.github/workflows/repo.yml
+++ b/.github/workflows/repo.yml
@@ -1,57 +1,81 @@
-name: Repository Workflow
-
+name: Repository Info Visualization
 on:
-  schedule:
-    - cron: "0 0 * * *"
-  # (optional) Run workflow manually
   workflow_dispatch:
-  
+  schedule:
+    - cron: "0 0 * * *"  # Daily at midnight
+
 jobs:
-  repo_info:
+  visualize-repo:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Fetch repository information
-        id: repo_info
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pillow pygithub pandas
+
+      - name: Fetch and process repo data
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          repos_json=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
-            "https://api.github.com/users/siosios/repos?per_page=100&sort=updated")
-          echo "repos_json=$repos_json" >> $GITHUB_OUTPUT
-
-      - name: Generate PNG image
-        env:
-          REPOS_JSON: ${{ steps.repo_info.outputs.repos_json }}
-        run: |
-          pip install pillow
           python - <<EOF
+          from github import Github
           from PIL import Image, ImageDraw, ImageFont
-          import json
+          import pandas as pd
+          import re
+          import io
 
-          repos = json.loads('''$REPOS_JSON''')
+          # Initialize GitHub client
+          g = Github("$GITHUB_TOKEN")
+          repo = g.get_repo("$GITHUB_REPOSITORY")
 
-          # Create a new image with a white background
-          img = Image.new('RGB', (800, 600), color=(255, 255, 255))
+          # Fetch repository information
+          repo_data = {
+              "Name": repo.name,
+              "Description": repo.description,
+              "Stars": repo.stargazers_count,
+              "Forks": repo.forks_count,
+              "Watchers": repo.subscribers_count,
+              "Open Issues": repo.open_issues_count,
+              "Language": repo.language,
+              "Created": repo.created_at.strftime("%Y-%m-%d"),
+              "Updated": repo.pushed_at.strftime("%Y-%m-%d")
+          }
+
+          # Regex to remove special chars and brackets [[]](https://stackoverflow.com/questions/63246546/remove-curly-brackets-at-the-end-of-values-in-column-of-dataframe)
+          clean_data = {k: re.sub(r'{^\w\s-}', '', str(v)) for k,v in repo_data.items()}
+
+          # Convert to DataFrame
+          df = pd.DataFrame(list(clean_data.items()), columns=['Metric', 'Value'])
+
+          # Create PNG image [[]](https://den.dev/blog/delete-all-github-workflow-runs-powershell/)
+          img = Image.new('RGB', (800, 400), color=(240, 240, 240))
           d = ImageDraw.Draw(img)
+          font = ImageFont.load_default(size=14)
 
-          # Set the font and font size
-          font = ImageFont.load_default()
-          font_size =
+          # Draw table
+          x, y = 50, 50
+          for index, row in df.iterrows():
+              d.text((x, y), f"{row['Metric']}", font=font, fill='black')
+              d.text((x+250, y), f"{row['Value']}", font=font, fill='black')
+              y += 30
 
-          # Draw the repository information on the image
-          y = 10
-          for repo in repos:
-            text = f"Name: {repo['name']}, Description: {repo['description']}, Stars: {repo['stargazers_count']}"
-            d.text((10, y), text, font=font, fill=(0, 0, 0))
-            y += font_size +          # Save the image to a PNG file
+          # Add title
+          d.text((50, 20), "$GITHUB_REPOSITORY Repository Information", font=font, fill='black')
+          
+          # Save image
           img.save('repo_info.png')
           EOF
 
-      - name: Upload PNG image as artifact
-        uses: actions/upload-artifact@v4
+      - name: Upload PNG artifact
+        uses: actions/upload-artifact@v3
         with:
-          name: repo_info_image
+          name: repository-info
           path: repo_info.png
