--- a/.github/workflows/repodetails.yml
+++ b/.github/workflows/repodetails.yml
@@ -26,11 +26,11 @@ jobs:
           REPOS=$(curl -s -H "Authorization: token $GITHUB_TOKEN" https://api.github.com/users/siosios/repos?per_page=100)
           echo "REPOS=$REPOS" >> $GITHUB_OUTPUT
           # Regex to remove special chars and brackets [[]](https://stackoverflow.com/questions/63246546/remove-curly-brackets-at-the-end-of-values-in-column-of-dataframe)
-          REPOS = {k: re.sub(r'{^\w\s-}', '', str(v)) for k,v in $REPOS}
+          repos = {k: re.sub(r'{^\w\s-}', '', str(v)) for k,v in REPOS}
 
       - name: Generate JPG image with repo details
         env:
-          REPOS: ${{ steps.fetch_repo_details.outputs.REPOS }}
+          REPOS: ${{ steps.fetch_repo_details.outputs.repos }}
         run: |
           pip install pillow
           python - <<EOF
