--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,8 +70,9 @@ jobs:
   docker-master:
     name: Publish master to GitHub registry
     runs-on: self-hosted
+    permissions:
+      packages: write
     needs: [ update-indexes ]
-    permissions: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
