--- a/.github/workflows/metrics-extended.yml
+++ b/.github/workflows/metrics-extended.yml
@@ -43,10 +43,6 @@ jobs:
           plugin_languages_threshold: 0%
           plugin_repositories: yes
           plugin_repositories_order: featured, pinned, starred, random
-          plugin_stargazers: yes
-          plugin_stargazers_charts: yes
-          plugin_stargazers_charts_type: classic
-          plugin_stargazers_days: 14
           plugin_traffic: yes
           plugin_repositories_featured: Netdata-on-Ipfire, autoinstall_cloudstack
           plugin_code: yes
@@ -60,3 +56,34 @@ jobs:
           plugin_lines_history_limit: 1
           plugin_lines_repositories_limit: 4
           plugin_lines_sections: base
+
+          plugin_introduction: yes
+          plugin_introduction_title: yes
+          plugin_languages: yes
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
+          plugin_languages_details: bytes-size, percentage
+          plugin_languages_limit: 8
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 14
+          plugin_languages_recent_load: 300
+          plugin_languages_sections: most-used
+          plugin_languages_threshold: 0%
+          plugin_languages_ignored: >-
+            smalltalk,
+            jupyter notebook
+          plugin_lines: yes
+          plugin_notable: yes
+          plugin_notable_from: organization
+          plugin_notable_types: commit
+          plugin_sponsors: no
+          plugin_sponsors_sections: goal
+          plugin_sponsors_size: 24
+          plugin_traffic: yes
+          plugin_licenses: yes
+          plugin_licenses_setup: npm ci
+          plugin_licenses_legal: no
+          plugin_licenses_ratio: yes
+          plugin_followup: yes
+          plugin_followup_sections: user
