--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -14,6 +14,7 @@ jobs:
       contents: read
       pull-requests: read
       actions: read
+      packages: read
     outputs:
       followup: ${{ steps.spelling.outputs.followup }}
     runs-on: ubuntu-latest
