--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,14 +77,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       # Log in to GitHub Container Registry to allow pushing Docker images
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-         registry: ghcr.io
-         username: ${{ github.actor }}
-  # - name: Login to GitHub registry
-  #   run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-   #     run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      #- name: Login to GitHub Container Registry
+      #  uses: docker/login-action@v3
+      #  with:
+       #  registry: ghcr.io
+      #   username: ${{ github.actor }}
+      - name: Login to GitHub registry
+        run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build docker image
         run: docker build -t ghcr.io/siosios/metrics:master .
       - name: Publish to GitHub registry
